Show dual view of points before registration

--- a/Changelog.html
+++ b/Changelog.html
@@ -261,29 +261,37 @@ pre[data-line] .line-highlight[data-end]:after {
     </head>
     <body for="html-export">
       <div class="mume markdown-preview  ">
-      <h2 class="mume-header" id="changelog">Changelog</h2>
+      <h1 class="mume-header" id="bronchovision">BronchoVision</h1>
 
+<h2 class="mume-header" id="changelog">Changelog</h2>
+
+<hr>
+<h3 class="mume-header" id="2020-12-phantom-version">2020-12 (Phantom version)</h3>
+
+<ul>
+<li><strong>New Features</strong><br>
+- Visualize Image/Tracker points before registration<br>
+- Show the final Registration Matrix (Scale*Rotation, Translation)</li>
+<li><strong>Fixes</strong><br>
+- Remove the cross mark, after resetting Virtual mode<br>
+- Show correct and registered points, loaded in tracker offline section</li>
+</ul>
 <hr>
 <h3 class="mume-header" id="2020-11-phantom-version">2020-11 (Phantom version)</h3>
 
 <ul>
-<li><strong>New Features</strong>
-<ul>
-<li>Adjusted orientation widget (man model) to match the orientation of the Phantom</li>
-<li>Adjusted 2D views for the phantom</li>
-<li>Extract/Load Image Centerline</li>
-<li>Record/Load Tracker Centerline</li>
-<li>Integrated Registration Process</li>
-<li>Complete and working registration process</li>
-<li>Added tracker status splash messages</li>
-</ul>
-</li>
-<li><strong>Fixes</strong>
-<ul>
-<li>Fixed 2D view problem</li>
-<li>Fixed tracker&apos;s crash</li>
-</ul>
-</li>
+<li><strong>New Features</strong><br>
+- Adjusted orientation widget (man model) to match the orientation of the Phantom<br>
+- Adjusted 2D views for the phantom<br>
+- Extract/Load Image Centerline<br>
+- Record/Load Tracker Centerline<br>
+- Integrated Registration Process<br>
+- Complete and working registration process<br>
+- Added tracker status splash messages<br>
+- Save Image Centerline, Tracker Centerline and Registration Matrix for the current patient and load them automatically on the next run</li>
+<li><strong>Fixes</strong><br>
+- Fixed 2D view problem<br>
+- Fixed tracker&apos;s crash</li>
 </ul>
 
       </div>
