--- a/README.html
+++ b/README.html
@@ -286,7 +286,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </li>
 <li>
 <p><strong>Run the application</strong></p>
-<pre data-role="codeBlock" data-info class="language-"><code>&gt; run.bat
+<pre data-role="codeBlock" data-info class="language-"><code>&gt; src\run.bat
 </code></pre></li>
 </ol>
 <hr>
