fixed errors in new/load/delete patients

--- a/Changelog.html
+++ b/Changelog.html
@@ -274,7 +274,8 @@ pre[data-line] .line-highlight[data-end]:after {
 - Show the final Registration Matrix (Scale*Rotation, Translation)</li>
 <li><strong>Fixes</strong><br>
 - Remove the cross mark, after resetting Virtual mode<br>
-- Show correct and registered points, loaded in tracker offline section</li>
+- Show correct and registered points, loaded in tracker offline section<br>
+- Fixed errors in New/Load/Delete Patients</li>
 </ul>
 <hr>
 <h3 class="mume-header" id="2020-11-phantom-version">2020-11 (Phantom version)</h3>
